# mcp-jira-ai-test-runner

./: .env.example  LICENSE  README.md  pyproject.toml
scripts/: generate_html_report.py  generate_qa_report.py  generate_restful_booker_report.py
src/: server.py
tests/: conftest.py  test_html_report.py  test_qa_generated_api_report.py  test_restful_booker_generated_report.py  test_server.py
